added getUsers method

--- a/force-app/main/default/classes/TrelloSyncController.cls
+++ b/force-app/main/default/classes/TrelloSyncController.cls
@@ -29,9 +29,9 @@ public with sharing class TrelloSyncController {
         return boardsMap;
     }
 
-    public static Map<Integer, List<String>> getLists() {
+    public static Map<String, List<String>> getLists() {
         Map<String, List<String>> boardsMap = TrelloSyncController.getBoards();
-        Map<Integer, List<String>> listsMap = new Map<Integer, List<String>>();
+        Map<String, List<String>> listsMap = new Map<String, List<String>>();
         String endPoint = 'https://api.trello.com/1/boards/{0}/lists?key={1}&token={2}';
         String apiKey = TrelloSyncController.getTrelloSettings().get('apiKey');
         String tokenValue = TrelloSyncController.getTrelloSettings().get('tokenValue');
@@ -53,7 +53,7 @@ public with sharing class TrelloSyncController {
                 Map<String, Object> objMap = (Map<String, Object>) obj;
 
                 listsMap.put(
-                    listPosition,
+                    String.valueOf(listPosition),
                     new List<String> {
                         String.valueOf(objMap.get('id')),
                         String.valueOf(objMap.get('name')),
@@ -67,14 +67,50 @@ public with sharing class TrelloSyncController {
         return listsMap;
     }
 
+    public static List<Map<String, List<String>>> getUsers() {
+        List<Map<String, List<String>>> userList = new List<Map<String, List<String>>>();
+        Map<String, List<String>> listsMap = TrelloSyncController.getLists();
+        Map<String, List<String>> usersMap = new Map<String, List<String>>();
+        String endPoint = 'https://api.trello.com/1/boards/{0}/members?key={1}&token={2}';
+        String apiKey = TrelloSyncController.getTrelloSettings().get('apiKey');
+        String tokenValue = TrelloSyncController.getTrelloSettings().get('tokenValue');
+        String boardId = listsMap.get('0')[2];
+        Http http = new Http();
+        HttpRequest request = new HttpRequest();
+
+        request.setEndpoint(String.format(endPoint, new List<String> { boardId, apiKey, tokenValue }));
+        request.setMethod('GET');
+
+        HttpResponse response = http.send(request);
+
+        if (response.getStatusCode() == 200 && String.isNotBlank(response.getBody())) {
+            List<Object> results = (List<Object>) JSON.deserializeUntyped(response.getBody());
+
+            for (Object obj : results) {
+                Map<String, Object> objMap = (Map<String, Object>) obj;
+
+                usersMap.put(String.valueOf(objMap.get('id')), new List<String> {
+                    String.valueOf(objMap.get('username'))
+                });
+            }
+
+            userList.add(listsMap);
+            userList.add(usersMap);
+        }
+
+        return userList;
+    }
+
     public static Map<String, List<String>> getCards() {
-        Map<Integer, List<String>> listsMap = TrelloSyncController.getLists();
+        List<Map<String, List<String>>> userList = TrelloSyncController.getUsers();
+        Map<String, List<String>> listsMap = userList[0];
+        Map<String, List<String>> usersMap = userList[1];
         Map<String, List<String>> cardsMap = new Map<String, List<String>>();
         Map<String, List<String>> positionsByIdMap = new Map<String, List<String>>();
         String endPoint = 'https://api.trello.com/1/boards/{0}/cards?key={1}&token={2}';
         String apiKey = TrelloSyncController.getTrelloSettings().get('apiKey');
         String tokenValue = TrelloSyncController.getTrelloSettings().get('tokenValue');
-        String boardId = listsMap.get(0)[2];
+        String boardId = listsMap.get('0')[2];
         Integer cardPosition = 0;
         Http http = new Http();
         HttpRequest request = new HttpRequest();
@@ -87,7 +123,7 @@ public with sharing class TrelloSyncController {
         if (response.getStatusCode() == 200 && String.isNotBlank(response.getBody())) {
             List<Object> results = (List<Object>) JSON.deserializeUntyped(response.getBody());
 
-            for (Integer listKey : listsMap.keySet()) {
+            for (String listKey : listsMap.keySet()) {
                 positionsByIdMap.put(
                     listsMap.get(listKey)[0],
                     new List<String> { String.valueOf(listKey), listsMap.get(listKey)[1]}
@@ -97,14 +133,20 @@ public with sharing class TrelloSyncController {
             for (Object obj : results) {
                 Map<String, Object> objMap = (Map<String, Object>) obj;
                 String idList = String.valueOf(objMap.get('idList'));
+                List<Object> idMemberList = (List<Object>) objMap.get('idMembers');
+                List<String> userNameList = new List<String>();
+
+                for (Object idUser : idMemberList) {
+                    userNameList.add(usersMap.get(String.valueOf(idUser))[0]);
+                }
 
                 cardsMap.put(
-                    positionsByIdMap.get(idList)[0] + String.valueOf(cardPosition),
+                    positionsByIdMap.get(idList)[0] + '-' + String.valueOf(cardPosition),
                     new List<String> {
                         String.valueOf(objMap.get('name')),
                         String.valueOf(objMap.get('desc')),
-                        String.valueOf(objMap.get('idMembers')),
                         String.valueOf(objMap.get('due')),
+                        String.valueOf((Object) userNameList),
                         positionsByIdMap.get(idList)[1]
                     }
                 );
