added custom metadata type, fixed KanbanBoardController

--- a/force-app/main/default/classes/KanbanBoardController.cls
+++ b/force-app/main/default/classes/KanbanBoardController.cls
@@ -4,31 +4,33 @@ public with sharing class KanbanBoardController {
     public static KanbanBoard getKanbanBoard() {
         TrelloSyncController.syncCards();
 
-        Set<String> statuses = new Set<String>();
-        List<Integer> statusPosition = new List<Integer>();
+        List<Trello_Status_Setting__mdt> statusList = [
+            SELECT Position__c, Status__c
+            FROM Trello_Status_Setting__mdt
+            ORDER BY Position__c
+        ];
+
+        List<String> statuses = new List<String>();
         List<Card__c> availableCardList = [
             SELECT Name, Description__c, Assignee__c, Due_Date__c, Status__c, Status_Id__c, StatusPosition__c
             FROM Card__c
             ORDER BY StatusPosition__c
         ];
 
-        for (Card__c card : availableCardList) {
-            statuses.add(card.Status__c);
-            statusPosition.add((Integer) card.StatusPosition__c);
+        for (Trello_Status_Setting__mdt status : statusList) {
+            statuses.add(String.valueOf(status.Status__c));
         }
 
-        return new KanbanBoard(availableCardList, new List<String>(statuses), statusPosition);
+        return new KanbanBoard(availableCardList, statuses);
     }
 
     @AuraEnabled
-    public static String getUpdateStatus(Id recordId, String status, Integer position) {
+    public static void getUpdateStatus(Id recordId, String status, Integer position) {
         SObject card = recordId.getSObjectType().newSObject(recordId);
         card.put('Status__c', status);
         card.put('StatusPosition__c', position);
 
         update card;
-
-        return 'Success';
     }
 
     public class KanbanBoard {
@@ -36,13 +38,10 @@ public with sharing class KanbanBoardController {
         public List<Card__c> cardList { get; set; }
         @AuraEnabled
         public List<String> statusList { get; set; }
-        @AuraEnabled
-        public List<Integer> statusPosition { get; set; }
 
-        public KanbanBoard (List<Card__c> cards, List<String> statuses, List<Integer> positions) {
+        public KanbanBoard (List<Card__c> cards, List<String> statuses) {
             this.cardList = cards;
             this.statusList = statuses;
-            this.statusPosition = positions;
         }
     }
 }
